<resources>
    <string name="app_name">Personal Diary</string>
    <string name="btn_logout_from_google">Log Out</string>
    <string name="btn_revoke_access">Revoke</string>
    <string name="mail">Log Out</string>
    <string name="setting">Settings</string>
    <string name="title_activity_text_note">TextNoteActivity</string>
    <string name="title_activity_image_note">ImageNoteActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="title_text_size">Text Size</string>
    <string name="key_text_size">key_text_size</string>
    <string name="summary_text_size">Set  Your Own Text Size</string>
    <string name="title_text_color">Text Color</string>
    <string name="key_text_color">key_text_color</string>
    <string name="summary_text_color">Set Text Color</string>
    <string name="title_background_color">Background Color</string>
    <string name="key_background_color">key_background_color</string>
    <string name="summary_background_color">Set Text Background Color</string>
    <string name="pass">Change Password</string>
</resources>
